syntax = "proto3";

import "cloud/blockstore/public/api/protos/headers.proto";
import "cloud/storage/core/protos/error.proto";

package NCloud.NBlockStore.NProto;

option java_package = "ru.yandex.cloud.blockstore.proto";
option go_package = "a.yandex-team.ru/cloud/blockstore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////
// Private API

message TExecuteActionRequest
{
    // Optional requeest headers.
    THeaders Headers = 1;

    // Name of action to execute.
    string Action = 2;

    // Optional arguments represented in JSON format.
    bytes Input = 3;
}

message TExecuteActionResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;

    // Action output.
    bytes Output = 2;
}
